add swaggo for user, edit user model, add change nickname api
